css/style.css
/* Import fonts */
@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic);
@import url(http://fonts.googleapis.com/css?family=Fjalla+One);

body {
    color: #797979;
    background-color: #475268;
    font-family: 'Open Sans', sans-serif;
    padding: 0px !important;
    margin: 0px !important;
    font-size:13px;
}


a, a:hover, a:focus {
    text-decoration: none;
    outline: none;
}

::selection {
    background: #F77B6F;
    color: #fff;
}
::-moz-selection {
    background: #F77B6F;
    color: #fff;
}

h1,h2,h3,h4,h5,h6 {
    font-family: 'Open Sans', sans-serif;
}

a {
    color: #444e67;
}

a:hover {
    color: #f77b6f;
}

p {line-height: 22px}

/*header*/
.feature-head {
    padding: 50px 0;
}

.feature-head h1{
    color: #475168;
    font-size: 30px;
    font-weight: 300;
    text-transform: uppercase;
    margin-top: 0;
    font-family: 'Fjalla One', sans-serif;
}

.feature-head p{
    color: #8a8b8b;
    font-size: 18px;
    font-weight: 300;
}


.header-frontend .navbar {
    margin-bottom: 0;
}

.navbar-default {
    border: none;
}

.navbar-brand {
    color: #bcc0cd;
    font-size: 30px;
    font-weight: 100;
    line-height: 30px;
    margin-top: 30px;
    padding: 0 0 0 15px;
}

.navbar-brand span{
    color: #f25f5b;
}

.header-frontend .navbar-collapse  ul.navbar-nav {
    float: right;
    margin-right: 0;
}

.header-frontend .navbar-default{
    background-color: #fff;
}

.header-frontend .nav li a, .header-frontend .nav li.active ul.dropdown-menu li a {
    color: #999;
    font-size: 14px;
    font-weight: 300;
    background: none;
}

.header-frontend .nav li a:hover,
.header-frontend .nav li a:focus,
.header-frontend .nav li.active a,
.header-frontend .nav li.active a:hover,
.header-frontend .nav li a.dropdown-toggle:hover,
.header-frontend .nav li a.dropdown-toggle:focus,
.header-frontend .nav li.active ul.dropdown-menu li a:hover,
.header-frontend .nav li.active ul.dropdown-menu li.active a{
    color: #fff ;
    background-color: #f77b6f;
    -webkit-transition: all .3s ease;
    -moz-transition: all .3s ease;
    -ms-transition: all .3s ease;
    -o-transition: all .3s ease;
    transition: all .3s ease;
}


.header-frontend .navbar-default .navbar-nav > .open > a,
.header-frontend .navbar-default .navbar-nav > .open > a:hover,
.header-frontend .navbar-default .navbar-nav > .open > a:focus {
    color: #fff;
    background-color: #f77b6f;
    -webkit-transition: all .3s ease;
    -moz-transition: all .3s ease;
    -ms-transition: all .3s ease;
    -o-transition: all .3s ease;
    transition: all .3s ease;
}


.header-frontend .navbar {
    min-height: 100px;
}

.header-frontend .navbar-nav > li  {
    padding-bottom: 30px;
    padding-top: 30px;
}

.header-frontend  .navbar-nav > li > a {
    padding-bottom: 6px;
    padding-top: 5px;
    border-radius: 5px;
    -webkit-border-radius: 5px;
    margin-left: 2px;
    line-height: 30px;

    -webkit-transition: all .3s ease;
    -moz-transition: all .3s ease;
    -ms-transition: all .3s ease;
    -o-transition: all .3s ease;
    transition: all .3s ease;
}


.dropdown-menu li a:hover {
    color: #fff !important;
}

.header-frontend .nav .caret {
    border-bottom-color: #999;
    border-top-color: #999;
}

.dropdown-menu  {
    box-shadow: none;
    border-radius: 0;
}

.header-frontend .nav li .dropdown-menu  {
   padding: 0;
}

.header-frontend .nav li .dropdown-menu li a {
   line-height: 28px;
   padding: 3px 12px;
}

/*tabs*/

.tab {
    background: #f4f4f4;
}

.tab .nav > li > a {
    padding: 18px 15px;
}

.tab-bg-dark-navy-blue {
    background:#6f6f6f;
    border-bottom: none;
    border-radius: 5px 5px 0 0;
    -webkit-border-radius: 5px 5px 0 0;
    padding: 0;
}

.tab-bg-dark-navy-blue .nav > li > a:hover, .tab-bg-dark-navy-blue .nav > li > a:focus {
    background-color: #f4f4f4;
    text-decoration: none;
}


.panel-heading .nav > li > a,
.panel-heading .nav > li.active > a, .panel-heading .nav > li.active > a:hover, .panel-heading .nav > li.active > a:focus {
    border-width: 0;
    border-radius: 0;
}

.panel-heading .nav > li > a {
    color: #fff;
}

.panel-heading .nav > li.active > a, .panel-heading .nav > li > a:hover {
    color: #6f6f6f;
    background: #f4f4f4;
}

.panel-heading .nav > li:first-child.active > a, .panel-heading .nav > li:first-child > a:hover {
    border-radius: 4px 0 0 0;
    -webkit-border-radius: 4px 0 0 0;
}

.tab .nav-tabs.nav-justified > li {
    border-right: 1px solid #f4f4f4;
}

.tab .nav-tabs.nav-justified > li:last-child {
    border-right: none;
}

.p-head {
    color: #F77B6F;
    font-size: 14px;
    font-weight: 400;
}

.cmt-head {
    font-size: 14px;
    font-weight: 400;
}

.p-thumb img {
    border-radius: 3px;
    -webkit-border-radius: 3px;
    height: 50px;
    width: 50px;
}


.mask a i {
    color: #242424 !important;
    font-size: 16px;
    line-height: 40px;
}

.r-work {
    color: #475168;
    text-transform: uppercase;
    font-size: 24px;
    font-weight: 400;
    margin-bottom: 20px;
    font-family: 'Fjalla One', sans-serif;
}

.bx-wrapper {
    margin-bottom: 120px;
}

.icon-wrap {
    font-size: 2em;
    height: 60px;
    width: 60px;
    float: left;
    line-height: 60px;
    text-align: center;
    color: #fff;
    margin-right: 30px;
}

.ico-bg {
    background: #f37d6c;
}

.round {
    border-radius: 50%;
    -webkit-border-radius: 50%;
}


.content h3, .media h3 {
    margin-top: 0;
    color: #475168;
    font-size: 20px;
    font-family: 'Fjalla One', sans-serif;
}

.media h3 {
    margin-top:20px;
}

.media-body h4 {
    font-size: 16px;
    color: #475168;
}

.services {
    margin-bottom: 40px;
    display: inline-block;
    width: 100%;
}

.gray-box {
    background: #f2f2f2;
    padding: 60px 0;
}

/*buttons*/

.btn-row {
    margin-bottom: 30px;
}

.media p {
    line-height: normal;
}

ul.tag  {
    display: inline-block;
    width: 100%;
}

ul.tag li {
    float: left;
    margin: 10px 10px 0 0;
    border-bottom: none;
}
ul.tag li a {
    border: 1px solid #e8e8e8;
    padding: 0 10px;
    border-radius:4px ;
    -webkit-border-radius:4px ;
}

.media img.media-object {
    border-radius: 50%;
    -webkit-border-radius: 50%;
    height: 80px;
    width: 80px;
}


/*footer*/

.footer {
    background: #475268;
    color: #fff;
    padding: 50px 0;
    margin-top: 50px;
    display: inline-block;
    width: 100%;
    font-weight: 300;
}

.footer h1 {
    font-size: 20px;
    text-transform: uppercase;
    font-weight: 400;
    margin-top: 0;
    margin-bottom: 20px;
    font-family: 'Fjalla One', sans-serif;
}


.footer address a {
    color: #f37c6b;
}

#main-content {
    padding-left: 50px;
}

